# xtquant

./: pyproject.toml  xtdata.py  xttrader.py
qmttools/: contextinfo.py  functions.py
