[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtquant"
version = "1.0.0"
description = "XtQuant trading platform Python API"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["xtquant", "qmttools", "xtbson", "xtbson.bson36", "xtbson.bson37"]

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.dll", "*.ini", "*.log4cxx"]