[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtquant"
version = "1.0.0"
description = "XtQuant trading platform Python API"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["xtquant", "xtquant.xtbson", "xtquant.xtbson.bson36", "xtquant.xtbson.bson37", "qmttools"]

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.dll", "*.ini", "*.log4cxx"]